package com.officine.losto.entity;

public enum Statut {
	 NON, 
	PARTIELLE, 
	COMPLETE; 
}
